Bug 162068 - Can't add to a playlist -- drag-and-drop doesn't work
Summary: Can't add to a playlist -- drag-and-drop doesn't work
Status: RESOLVED FIXED
Alias: None
Product: juk
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Michael Pyne
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-05-13 23:45 UTC by Chris
Modified: 2008-05-14 05:39 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chris 2008-05-13 23:45:15 UTC
Version:           3.0.1 (using 4.0.3 (KDE 4.0.3), Kubuntu packages)
Compiler:          gcc
OS:                Linux (i686) release 2.6.24-16-generic

When I select songs in the Collection List and try to drag and drop them onto the icon for an empty playlist, a no-sign icon appears at the mouse pointer and they are not added to a playlist. This leaves me with no way to add songs to an existing playlist!

How to reproduce: create an empty playlist or a playlist from a selection of songs in the Collection List. Select some other songs and try to drag-and-drop them onto the icon of the new playlist.

Expected behaviour: Songs dragged-and-dropped onto another playlist's icon from the open playlist are added to the playlist unless they are in it already.
Comment 1 Chris 2008-05-13 23:50:25 UTC
Also, Tree View, Compact View and Normal View all appear exactly the same for me (even though my collection does include multiple artists, albums, genres). The menu that selects between these has no effect that I can see.
Comment 2 Michael Pyne 2008-05-14 05:34:41 UTC
Please don't report two different bugs in the same bug report.  I have opened your bug about View Mode being broken as bug 162074.
Comment 3 Michael Pyne 2008-05-14 05:39:16 UTC
SVN commit 807600 by mpyne:

Fix bug 162068 (drag and drop does not work in JuK) in 4.0 branch.

CCBUG:162068


 M  +2 -2      collectionlist.cpp  
 M  +18 -22    playlist.cpp  
 M  +2 -3      playlist.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=807600
Comment 4 Michael Pyne 2008-05-14 05:39:52 UTC
SVN commit 807601 by mpyne:

Fix bug 162068 (drag and drop does not work in juk) in trunk.

BUG:162068


 M  +2 -2      collectionlist.cpp  
 M  +18 -22    playlist.cpp  
 M  +2 -3      playlist.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=807601