Fix bug 162068 (drag and drop does not work in juk) in trunk.

BUG:162068

svn path=/trunk/KDE/kdemultimedia/juk/; revision=807601